<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NamespaceTypo">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="35sp"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/txv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/txv1"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/title"
        app2:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_baseline_mail_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/dark_brown"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/txv1"
        app2:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/dark_brown"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/txv_email"
        app2:layout_constraintVertical_bias="0.041"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/txv_olvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidar"
        android:textSize="14sp"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.915"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/txv_password"
        app2:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/indian_red"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/txv_password"
        app2:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/txv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv2"
        android:textSize="16sp"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toStartOf="@+id/txv_registrar"
        app2:layout_constraintHorizontal_bias="0.952"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/btn_login"
        app2:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/txv_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_registrar"
        android:textColor="@color/indian_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.939"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/btn_login"
        app2:layout_constraintVertical_bias="0.163" />
</androidx.constraintlayout.widget.ConstraintLayout>